# Pipman-CLI

./: README.md  pyproject.toml
pipman/: __init__.py  main.py
